# AgentGoals

./: .gitignore  AGENTS.md  HANDOFF.md  MANIFEST.in  PACKAGE_README.md  README.md  pyproject.toml
.github/workflows/: package.yml
.omo/evidence/: codex-skill-optimization-gate-review.md  read-only-global-state-aggregator-code-review.md  read-only-global-state-aggregator-hardening-review.md
apps/: goal_dashboard.pyw
docs/: design.md  desktop-shell-spike.md  global-registry-schema-notes.md  health-policy.md  migration-agentgoals.md  onboarding.md  production-readiness.md  production-state-topology.md  session-handoff.md  usage.md
docs/proposals/: global-goal-registry.md  goal-preflight-artifact-tooling-integration.md  (+1 more)
evidence/: agentgoals-legacy-audit.md  agentgoals-rename-runtime.md
fixtures/: README.md
registry/: REGISTRY.json
schemas/: artifact-decision.schema.json  doctor-result.schema.json  global-registry.schema.json  goal-registry.schema.json  goal-registry.schema.md  goal-state.schema.json  goal-state.schema.md  onboarding-result.schema.json  skill-eval-manifest.schema.json  skill-eval-model-decision.schema.json  skill-eval-observations.schema.json
scripts/: benchmark_artifact_audit.py  benchmark_dashboard.py  benchmark_dashboard_package.ps1  build_dashboard.ps1  generate_dashboard_fixtures.py  package_smoke.py  verify_package_artifacts.py
src/agentgoals/: cli.py  (+22 more)
tests/: test_ag_skill_entrypoint_consolidation.py  test_agentgoals_migration.py  test_aggregate.py  test_artifact_audit.py  test_artifact_smoke.py  test_artifact_tool.py  test_cli.py  test_complete.py  test_dashboard.py  test_doctor.py  test_frontmatter.py  test_health.py  test_onboard.py  test_package_artifact_verification.py  test_package_contract.py  test_portable_skill.py  test_public_distribution.py  test_public_private_boundary.py  test_queue.py  test_reconcile.py  test_refresh.py  test_resolver.py  test_run.py  test_run_cli.py  test_schema_validation.py  test_session_eval.py  test_session_handoff.py  test_single_approval_onboarding.py  test_skill_eval.py
(+93 files in other folders)
