[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "goal-lifecycle-toolkit"
version = "0.1.0"
description = "Read-only Goal Contract lifecycle reconciliation harness"
readme = "PACKAGE_README.md"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0",
  "jsonschema>=4.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "coverage>=7.0",
]
desktop = [
  "pyinstaller>=6.0,<7.0",
]

[project.scripts]
goal-lifecycle = "goal_lifecycle.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.data-files]
"share/goal-lifecycle/schemas" = ["schemas/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = ["-s", "-p", "no:cacheprovider"]
