[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "agentgoals"
version = "0.2.1"
description = "Portable goal lifecycle management for AI coding agents."
readme = "PACKAGE_README.md"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0",
  "jsonschema>=4.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "coverage>=7.0",
]
desktop = [
  "pyinstaller>=6.0,<7.0",
]

[project.scripts]
agentgoals = "agentgoals.cli:main"
goal-lifecycle = "agentgoals.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.data-files]
"share/agentgoals/schemas" = ["schemas/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = ["-s", "-p", "no:cacheprovider"]
